--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
       <nav class="contenter">
         <img src="images/textfx.png" alt="Mama" width="500px" height="120px"/>
         <ul class="main_menu">
-          <li><a href="./tr1.html"><i class="fa-solid fa-house-chimney"></i> Trang chủ</a></li>
+          <li><a href="https://thutran2910.github.io/HienVaThu_tr1.github.io/"><i class="fa-solid fa-house-chimney"></i> Trang chủ</a></li>
           <li>
-            <a href="./tr2.html"><i class="fa-solid fa-person-breastfeeding"></i> Giới thiệu</a>
+            <a href="https://thutran2910.github.io/HienVaThu_tr2.github.io/"><i class="fa-solid fa-person-breastfeeding"></i> Giới thiệu</a>
             <ul class="sub_menu">
-              <li><a href="./tr2.html">Hình ảnh</a></li>
-              <li><a href="./tr2.html">Giá phòng</a></li>
-              <li><a href="./tr2.html">Khách hàng</a></li>
+              <li><a href="https://thutran2910.github.io/HienVaThu_tr2.github.io/">Hình ảnh</a></li>
+              <li><a href="https://thutran2910.github.io/HienVaThu_tr2.github.io/">Giá phòng</a></li>
+              <li><a href="https://thutran2910.github.io/HienVaThu_tr2.github.io/">Khách hàng</a></li>
             </ul>
           </li>
-          <li><a href="./tr3.html"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
-          <li><a href="#"><i class="fa-solid fa-file-pen"></i> Đặt phòng</a></li>
+          <li><a href="https://thutran2910.github.io/HienVaThu_tr3.github.io/"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
+          <li><a href="https://thutran2910.github.io/HienVaThu_tr4.github.io/"><i class="fa-solid fa-file-pen"></i> Đặt phòng</a></li>
         </ul>
       </nav>
     </div>
